<resources>
    <string name="app_name">ML Kit Codelab</string>
    <string name="select_image_for_text_recognition">Select image for text recognition</string>
    <string name="find_text_button">Find text</string>
    <string name="find_face_contour_button">Find face contour</string>
    <string name="find_text_cloud_button">Find text (cloud)</string>
    <string name="find_objects_button">Find objects</string>
    <string name="ktp">ktp</string>
    <string name="camera">Camera</string>
    <string name="camera_button">Camera button</string>
    <string name="take">Take</string>
</resources>
