<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".camera.CamActivity">


    <androidx.camera.view.PreviewView
        android:id="@+id/viewfinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </androidx.camera.view.PreviewView>

    <LinearLayout
        android:id="@+id/v_ktp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/ktp" />

        <ImageButton
            android:id="@+id/btn_takePicture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="150dp"
            android:contentDescription="@string/camera_button"
            android:src="@drawable/camera_btn"
            android:background="@color/black"
            android:text="@string/take"
            android:textColor="@color/white" />


    </LinearLayout>


</RelativeLayout>